--- a/.github/workflows/ci-flow.yml
+++ b/.github/workflows/ci-flow.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build docker and run tests
-        run: "make ci-run"
+        run: "make test-ci"
 
       - name: Get allure history
         uses: actions/checkout@v2
