--- a/docker-compose.allure.yml
+++ b/docker-compose.allure.yml
@@ -4,7 +4,7 @@ services:
     environment:
       CHECK_RESULTS_EVERY_SECONDS: 1
       KEEP_HISTORY: 1
-      COMPOSE_PROJECT_NAME : "reporter"
+      COMPOSE_PROJECT_NAME : ${COMPOSE_PROJECT_NAME}
 
     networks:
     - selenoid  
