--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "webdriverio-tests",
-    "version": "0.1.0",
-    "private": true,
+    "name": "ramzes-ts",
+    "version": "0.2.0",
+    "private": false,
     "scripts": {
         "test": "npx wdio wdio.selenoid.conf.ts",
         "spec": "wdio --spec ./test/specs/$FILE",
